--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,32 @@
-web/node_modules
-web/.env.local
-package/node_modules
-package/.env.local
+# Node modules
+node_modules/
+**/node_modules/
+
+# Build output
+dist/
+build/
+.next/
+out/
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+pnpm-debug.log*
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+
+# Local env
+.env
+.env.local
+.env.*.local
+
+# Package manager files
+.pnpm-debug.log
