--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@base-ui-components/react": "1.0.0-beta.1",
     "@radix-ui/react-slider": "^1.3.5",
     "@react-three/drei": "^10.5.1",
     "class-variance-authority": "^0.7.1",
@@ -21,7 +22,7 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "react-use-measure": "^2.1.7",
-    "shadex": "^0.1.4",
+    "shadex": "^0.1.6",
     "shiki": "^3.8.1",
     "tailwind-merge": "^3.3.1"
   },
